--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.8",
     "next-images": "^1.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.5",
     "react-typist": "^2.0.5",
     "styled-components": "^5.2.1"
   }
