--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.12.0",
+    "emailjs-com": "^2.6.4",
     "next": "10.0.8",
     "next-images": "^1.7.0",
     "react": "17.0.1",
