--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.8",
     "next-images": "^1.7.0",
     "react": "17.0.1",
+    "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
     "react-typist": "^2.0.5",
