--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "4.6.0",
     "emailjs-com": "^2.6.4",
     "next": "10.0.8",
     "next-images": "^1.7.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
