--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@zeit/next-css": "^1.0.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "4.6.0",
@@ -20,6 +21,7 @@
     "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
+    "react-icons": "^4.2.0",
     "react-typist": "^2.0.5",
     "styled-components": "^5.2.1"
   }
